--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 swfobject.embedSWF("ff.swf", "familyfeud", "1024", "768", "9.0.45.0", "#336699");
 </script>
 </head>
-<body bgcolor="#ffffff">
+<body bgcolor="#ffffff" style="text-align: center">
 
 
 <div id="familyfeud">
